Pylint is now default linter. 12.03.2023 @ 6:54 PM

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
      "editor.tabSize": 5,
-     "python.linting.pylintEnabled": false,
+     "python.linting.pylintEnabled": true,
      "python.linting.enabled": true,
      "python.pythonPath": "C:\\Users\\Rajesh R\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
-     "python.linting.flake8Enabled": true
+     "python.linting.flake8Enabled": false
 }
